# eth-prices

./: .gitignore  .mise.toml  Cargo.toml  README.md  TODO  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
.github/workflows/: build.yml  release.yml
examples/prometheus/: Cargo.toml
examples/prometheus/src/: main.rs
examples/router/: Cargo.toml
examples/router/src/: main.rs
examples/uniswap/: Cargo.toml
examples/uniswap/src/: main.rs
pkg/: Cargo.toml  config.toml  package.json
pkg/src/: builder.rs  config.rs  error.rs  js.rs  lib.rs  main.rs  wasm.rs
pkg/src/config/: mod.rs
pkg/src/js/: bindings.rs  convert.rs  engine.rs  mod.rs  quoter.rs  route.rs  types.rs
pkg/src/quoter/: any.rs  direction.rs  mod.rs
pkg/src/quoter/erc4626/: mod.rs
pkg/src/quoter/fixed/: mod.rs
pkg/src/quoter/uniswap_v2/: factory.rs  mod.rs  pair.rs
pkg/src/quoter/uniswap_v3/: factory.rs  mod.rs
pkg/src/quoters/: mod.rs
pkg/src/quoters/erc4626/: mod.rs
pkg/src/quoters/fixed/: mod.rs
pkg/src/quoters/uniswap_v2/: factory.rs  mod.rs  pair.rs
pkg/src/quoters/uniswap_v3/: factory.rs  mod.rs  pool.rs
pkg/src/router/: graph.rs  mod.rs
pkg/src/tests/: mod.rs
pkg/src/token/: erc20.rs  identity.rs  local.rs  mod.rs
pkg/src/trackers/: mod.rs
pkg/src/trackers/erc4626/: mod.rs
pkg/src/trackers/fixed/: mod.rs
pkg/src/trackers/uniswap/v2/: factory.rs  quoter.rs
pkg/src/trackers/uniswap/v3/: factory.rs  mod.rs  pool.rs  quoter.rs
pkg/src/trackers/uniswap_v2/: mod.rs
pkg/src/trackers/uniswap_v3/: quoter.rs
ts/: README.md  index.d.ts  index.js  package.json  tsconfig.json  vitest.config.ts
ts/src/: index.test.ts  index.ts  node.ts
ts/test/: quoter.rpc.test.ts  quoter.test.ts
