[package]
name = "eth-prices"
version = "0.0.2"
edition = "2024"
description = "A library for fetching Ethereum prices."
license = "LGPL-3.0"
repository = "https://github.com/v3xlabs/eth-prices/"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm-bindings = ["dep:serde-wasm-bindgen", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:getrandom", "dep:js-sys"]

[dependencies]
alloy = { version = "1", features = ["contract", "provider-http", "reqwest"], default-features = false }
anyhow = "1"
async-stream = "0.3.6"
figment = { version = "0.10.19", features = ["toml"] }
futures = "0"
petgraph = "0.8.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = { version = "0.6", optional = true }
tracing = { version = "0.1.44", default-features = false, features = ["log"] }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
getrandom = { version = "*", features = ["js"], optional = true }
js-sys = { version = "0.3", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
alloy = { version = "1", features = ["contract", "provider-http", "reqwest-rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.23"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
