[package]
name = "eth-prices"
version = "0.0.2"
edition = "2024"
description = "A library for fetching Ethereum prices."
license = "LGPL-3.0"
repository = "https://github.com/v3xlabs/eth-prices"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
futures = "0"
async-stream = "0.3.6"
figment = { version = "0.10.19", features = ["toml"] }
petgraph = "0.8.3"
tracing = { version = "0.1.44", default-features = false, features = ["log"] }
tracing-subscriber = "0.3.23"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
alloy = { version = "1", features = [
    "contract",
    "provider-http",
    "reqwest-rustls-tls",
], default-features = false }
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
alloy = { version = "1", features = [
    "contract",
    "provider-http",
    "reqwest",
], default-features = false }
getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[[bin]]
name = "eth-prices"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
cli = []

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
